--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for TAP
 
+        - Make coloring optional
+
 0.0.7
         - Run all and only .t and .t6 files
         - Automatically set some configuration values from environment
