--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for TAP
 
         - Run all and only .t and .t6 files
         - Automatically set some configuration values from environment
+        - Skip dot files and directories
 
 0.0.6
         - Reupload to fix packaging issues
