--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for TAP
 
 {{$NEXT}}
         - Restore SourceHandler::Exec's constructor
+        - Parse pragmas
 
 0.3.4  2022-01-21T23:29:46+01:00
         - Allow SourceHandler::Raku's incdirs arguments to be Str or IO::Path
