--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for TAP
 
 {{$NEXT}}
+        - Fix warning in Result.exit-failed()
 
 0.2.0  2021-08-08T22:31:06+02:00
         - Move prove6 to App::Prove6
