Make error handle a supplier instead of a supply
This code predates the Supply/Supplier split back in late 2015, but
apparently no one has tried using it until now so it wasn't noticed.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for TAP
 
 {{$NEXT}}
+        - Make error handle a supplier instead of a supply
 
 0.2.1  2021-08-09T15:30:06+02:00
         - Fix warning in Result.exit-failed()
