--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for TAP
 
 {{$NEXT}}
+        - Fix Supplier name in Output::Supplier
 
 0.3.0  2022-01-11T22:18:45+01:00
         - Allow Supplier as output handle
