--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for TAP
 
 {{$NEXT}}
-        - Add a cwd attribute to TAP::Harness
+        - Add a cwd argument to TAP::Harness::run
 
 0.3.1  2022-01-12T01:00:01+01:00
         - Fix Supplier name in Output::Supplier
