--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for TAP
 
 {{$NEXT}}
+        - Allow SourceHandler::Raku's incdirs arguments to be Str or IO::Path
 
 0.3.3  2022-01-21T23:00:00+01:00
         - Add a cwd argument to TAP::Harness::run
