--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for TAP
         - Restore SourceHandler::Exec's constructor
         - Parse pragmas
         - Process strict pragma
+        - Correctly handle IO::Path object as SourceHandler::Raku @!incdirs
 
 0.3.4  2022-01-21T23:29:46+01:00
         - Allow SourceHandler::Raku's incdirs arguments to be Str or IO::Path
