--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for TAP
 
 {{$NEXT}}
+        - Fix progress bar outputting in parallel mode
 
 0.3.5  2022-01-27T20:21:45+01:00
         - Restore SourceHandler::Exec's constructor
