--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for TAP
 
 {{$NEXT}}
+        - Handle start failures more gracefully
 
 0.3.6  2022-08-13T19:29:29+02:00
         - Fix progress bar outputting in parallel mode
