--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for TAP
 {{$NEXT}}
         - Handle start failures more gracefully
         - Don't report succes when no tests have been run
+        - Allow running binary tests
 
 0.3.6  2022-08-13T19:29:29+02:00
         - Fix progress bar outputting in parallel mode
