--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Revision history for TAP
         - Make TAP::Grammar public
         - Renamed Async to Parser
         - Add parse method to Source
+        - Moved SourceHandlers our of Harness
 
 0.3.8  2022-09-02T12:19:11+02:00
         - Correctly check exit code of processes
