--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for TAP
 
 {{$NEXT}}
+        - Make SourceHandler usable as type-object
 
 0.3.9  2022-12-23T14:03:54+01:00
         - Added a SourceHandler::File
