--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for TAP
 
 {{$NEXT}}
+        - Allow environmental variables in Source::Proc
 
 0.3.11  2023-01-02T16:29:11+01:00
         - Add handlers argument to Source.parse
