--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for TAP
 
 {{$NEXT}}
         - Allow environmental variables in Source::Proc
+        - Use RAKULIB instead of -I for include dirs
 
 0.3.11  2023-01-02T16:29:11+01:00
         - Add handlers argument to Source.parse
