--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for TAP
 
 {{$NEXT}}
+        - Stop harness on bailout
 
 0.3.14  2023-02-06T00:28:13+01:00
         - Colorize "ok" on success"
